# custom_end_effector

./: README.md
custom_dual_ee_configuration/: CHANGELOG.rst  package.xml
custom_dual_ee_configuration/config/: dynamic_footprint_arm_custom.yaml
custom_dual_ee_configuration/config/approach_planner/: approach_planner.yaml
custom_dual_ee_configuration/config/motions/: tiago_dual_motions.yaml
custom_dual_ee_description/: CHANGELOG.rst  package.xml
custom_dual_ee_description/urdf/: end-effector-left.urdf.xacro  end-effector-right.urdf.xacro
custom_ee_configuration/: CHANGELOG.rst  package.xml
custom_ee_description/: CHANGELOG.rst  package.xml
moveit_custom_config/: CHANGELOG.rst  package.xml
moveit_custom_dual_config/: CHANGELOG.rst  package.xml
moveit_custom_dual_config/config/controllers/: controllers_custom.yaml
moveit_custom_dual_config/config/srdf/: tiago_dual.srdf.em  tiago_dual_custom.srdf.em  tiago_dual_custom_custom.srdf  tiago_dual_custom_custom_custom.srdf  tiago_dual_custom_custom_custom_schunk-ft.srdf  tiago_dual_custom_custom_no-arm-right.srdf  tiago_dual_custom_custom_pal-gripper.srdf  tiago_dual_custom_custom_pal-gripper_schunk-ft.srdf  tiago_dual_custom_custom_pal-hey5.srdf  tiago_dual_custom_custom_pal-hey5_schunk-ft.srdf  tiago_dual_custom_custom_schunk-ft.srdf  tiago_dual_custom_custom_schunk-ft_custom.srdf  tiago_dual_custom_custom_schunk-ft_custom_schunk-ft.srdf  tiago_dual_custom_custom_schunk-ft_no-arm-right.srdf  tiago_dual_custom_custom_schunk-ft_pal-gripper.srdf  (+147 more)
moveit_custom_dual_config/scripts/: regen_em_file.py
